--- a/sort.html
+++ b/sort.html
@@ -221,6 +221,7 @@
             return arr;
         }
         /////////////////////////////////////////////插入排序
+        //有一个已经有序的数据序列，要求在这个已经排好的数据序列中插入一个数，但要求插入后此数据序列仍然有序
         let insertionSort = (arr) => {
             let len = arr.length;
             let preIndex, current;
@@ -236,6 +237,7 @@
             return arr;
         }
         /////////////////////////////////////////////希尔排序
+        //分组插入排序
         shellSort = (arr) => {  
             let gap =Math.floor(arr.length/2);  
             while(gap>=1){  
@@ -334,10 +336,11 @@
             return arr;
         }
         /////////////////////////////////////////////计数排序
+        //把数放入数组下标对应位置，并计数，遍历数组输出数
         let countingSort = (arr, maxValue) => {
             let bucket = new Array(maxValue + 1),
-                sortedIndex = 0;
-            arrLen = arr.length,
+                sortedIndex = 0,
+                arrLen = arr.length,
                 bucketLen = maxValue + 1;
 
             for (let i = 0; i < arrLen; i++) {
@@ -398,6 +401,15 @@
             return arr;
         }
         /////////////////////////////////////////////基数排序
+        // 基数排序的思想就是将待排数据中的每组关键字依次进行桶分配。比如下面的待排序列：
+        // 278、109、063、930、589、184、505、269、008、083
+        // 我们将每个数值的个位，十位，百位分成三个关键字： 278 -> k1(个位)=8 ，k2(十位) = 7 ，k3 = (百位) = 2。
+        // 然后从最低位个位开始(从最次关键字开始) ，对所有数据的k1关键字进行桶分配(因为，每个数字都是 0 - 9的，因此桶大小为10) ，再依次输出桶中的数据得到下面的序列。
+        // 930、063、083、184、505、278、008、109、589、269
+        // 再对上面的序列接着进行针对k2的桶分配，输出序列为：
+        // 505、008、109、930、063、269、278、083、184、589
+        // 最后针对k3的桶分配，输出序列为：
+        // 008、063、083、109、184、269、278、505、589、930
         //LSD Radix Sort
         let counter = [];
         let radixSort = (arr, maxDigit) => {
