--- a/sort.html
+++ b/sort.html
@@ -291,6 +291,7 @@
             return result;
         }
         /////////////////////////////////////////////堆排序
+        //堆实际上是一个完全二叉树，并且其左右子节点都不大于父节点（父节点大于子节点）
         let len;    //因为声明的多个函数都需要数据长度，所以把len设置成为全局变量
 
         let buildMaxHeap = (arr) => {   //建立大顶堆
