--- a/sort.html
+++ b/sort.html
@@ -296,15 +296,15 @@
 
         let buildMaxHeap = (arr) => {   //建立大顶堆
             len = arr.length;
-            for (let i = Math.floor(len / 2); i >= 0; i--) {
+            for (let i = Math.floor(len / 2 - 1); i >= 0; i--) {
                 heapify(arr, i);
             }
         }
 
         let heapify = (arr, i) => {     //堆调整
-            let left = 2 * i + 1,
-                right = 2 * i + 2,
-                largest = i;
+            let left = 2 * i + 1,//左节点
+                right = 2 * i + 2,//右节点
+                largest = i;//父节点
 
             if (left < len && arr[left] > arr[largest]) {
                 largest = left;
@@ -316,7 +316,7 @@
 
             if (largest != i) {
                 swap(arr, i, largest);
-                heapify(arr, largest);
+                heapify(arr, largest);//其子节点变父节点，再次调整
             }
         }
 
@@ -327,12 +327,13 @@
         }
 
         let heapSort = (arr) => {
+            //初始化，i从最後一个父节点开始调整
             buildMaxHeap(arr);
-
+            //先将第一个元素和已经排好的元素前一位做交换，再从新调整(刚调整的元素之前的元素)，直到排序完毕
             for (let i = arr.length - 1; i > 0; i--) {
                 swap(arr, 0, i);
                 len--;
-                heapify(arr, 0);
+                heapify(arr, 0);//从根节点开始递归
             }
             return arr;
         }
